# mirai-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README-CH_ZN.md  README-ZH_CN.md  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: ---bug.md  bug-report.md  bug_report.md  feature-track.md
core/: Cargo.toml
core/examples/: basic.rs
core/src/: error.rs  group.rs  lib.rs  member_list.rs  message.rs  session.rs
examples/: basic.rs  connect.rs  subscribe.rs  test_config.rs  upload_image.rs
examples/connect/: mod.rs
macro/: Cargo.toml
macro/src/: lib.rs
mirai_mock/: Cargo.toml
mirai_mock/src/: main.rs  mock.rs
mirai_rs/: Cargo.toml
mirai_rs/examples/: basic.rs  list.rs  parse_msg.rs  subscribe.rs  test_config.rs  upload_image.rs
mirai_rs/examples/connect/: mod.rs
mirai_rs/src/: common.rs  config.rs  error.rs  group.rs  image.rs  lib.rs  member_list.rs  session.rs
mirai_rs/src/grammar/: mirai_msg.pest
mirai_rs/src/message/: channel.rs  content.rs  element.rs  event.rs  message.rs  meta_msg.rs  mod.rs  parse.rs  receive.rs  send.rs  single.rs
mirai_rs/src/message/parse/: compiler.rs  mod.rs  parse.rs
mirai_test/: Cargo.toml
mirai_test/src/: lib.rs  tests.rs
mirai_test/src/data/: session.rs
src/: common.rs  config.rs  error.rs  group.rs  image.rs  lib.rs  member_list.rs  message.rs  session.rs  test.rs
src/message/: channel.rs  element.rs  event.rs  mod.rs  receive.rs  send.rs  single.rs
