[package]
name = "mirai_rs"
license = "GPL-3.0"
version = "0.1.1"
authors = ["HoshinoTented <limbolrain@gmail.com>"]
edition = "2018"
description = "mirai-rs is a mirai-api-http client implementation written in Rust"
homepage = "https://github.com/HoshinoTented/mirai-rs"
repository = "https://github.com/HoshinoTented/mirai-rs"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.19", features = ["full"] }

[lib]
name = "mirai"
path = "src/lib.rs"