[package]
name = "mirai_rs_macro"
version = "0.1.0"
authors = ["HoshinoTented <limbolrain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["visit"] }

[lib]
name = "mirai_rs_macro"
path = "src/lib.rs"
proc-macro = true