[package]
name = "mirai_rs"
license = "AGPL-3.0"
version = "0.1.2-alpha"
authors = ["HoshinoTented <limbolrain@gmail.com>"]
edition = "2018"
description = "mirai-rs is a mirai-api-http client implementation written in Rust"
homepage = "https://github.com/HoshinoTented/mirai-rs"
repository = "https://github.com/HoshinoTented/mirai-rs"
readme = "README.md"

exclude = [
    ".circleci/*"
]

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
bytes = { version = "0.5" }
regex = "1.3"
lazy_static = "1.4"
nom = "5.1"
pest = "2.1"
pest_derive = "2.1"

[lib]
name = "mirai"
path = "src/lib.rs"

[[example]]
name = "parse_msg"
required-features = ["parser"]

[features]
parser = []